# ChangeLog for dev-ruby/rubygems
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.213 2013/09/10 18:21:48 graaff Exp $

*rubygems-2.0.8 (10 Sep 2013)

  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> +rubygems-2.0.8.ebuild:
  Version bump for security bug 484476.

  05 Sep 2013; Jeroen Roovers <jer@gentoo.org> rubygems-2.0.3.ebuild:
  Stable for HPPA (bug #483254).

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rubygems-2.0.3.ebuild:
  Stable for x86, wrt bug #483254

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> rubygems-2.0.3.ebuild:
  Stable for amd64, wrt bug #483254

  19 Aug 2013; Manuel Rüger <mrueg@gentoo.org>
  -files/rubygems-1.3.3-gentoo.patch, -files/rubygems-1.3.5-setup.patch,
  -files/rubygems-1.3.7-gentoo.patch, -files/rubygems-1.3.7-ruby19.patch,
  -files/rubygems-1.8.7-ruby19.patch, -rubygems-1.3.7-r1.ebuild,
  -rubygems-1.3.7-r5.ebuild, -rubygems-1.3.7.ebuild:
  Cleanup rubygems-1.3.*

  16 Jul 2013; Hans de Graaff <graaff@gentoo.org> rubygems-2.0.3.ebuild:
  Update USE=server dependency to just builder. There is no indication that
  this only works with ruby 1.8, and no specific builder version is required in
  the source code. Fixes bug 476326.

  07 Jul 2013; Hans de Graaff <graaff@gentoo.org> rubygems-2.0.3.ebuild:
  Add ruby20 support.

*rubygems-2.0.3 (23 Jun 2013)

  23 Jun 2013; Hans de Graaff <graaff@gentoo.org> +rubygems-2.0.3.ebuild:
  Version bump. Enable jruby tests as much as possible. Avoid tests trying to
  write outside PORTAGE_DIR.

  07 May 2013; Hans de Graaff <graaff@gentoo.org> -rubygems-1.8.15.ebuild:
  Cleanup.

*rubygems-1.8.25 (30 Jan 2013)

  30 Jan 2013; Hans de Graaff <graaff@gentoo.org> +rubygems-1.8.25.ebuild:
  Version bump. Fixes bug 454668.

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> rubygems-1.8.24.ebuild:
  keyword ~amd64-fbsd

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> rubygems-1.8.24.ebuild: