@@ -8,29 +8,29 @@ AUX smtp.sasl 147 SHA256 0ef6a2a7846498f56b9a8879f561a51c1e3a203ba90b2991d499afa
 DIST postfix-2.10.0.tar.gz 3826655 SHA256 4a42a6029af418cbd4a8668b4f8c7e1ea9975cbe9756df760649c0a941bfeb7b SHA512 88689c2b18aeecd6e363525955c8e3506acf7702eb7fabe148b72a149020c29a76b3f6ed57109380ebb2106cf798a0ce78d470bc4a104a8ecde6c1c4cd0da07e WHIRLPOOL b47559ff91651c699581757976628ab87ffda91ef85f2ccb86ddc4982de68fe7f6dedc419a2708e879969081a7d54681f88763500cd816aed51958bbe0880b70
 DIST postfix-2.10.1.tar.gz 3827595 SHA256 2e85a62e97418bbb022b4d4433098a7f25adc7dc707c37d9984db2c2f314b1c1 SHA512 34d5923748b38dd93609657011adc1371ab738ee86558aa4822cce6e879ccdd426bb4de994ab425b3a2745c8ca10a01b2d1c5f310872e839f9627afa8dcccdf0 WHIRLPOOL d1e6c029429e6ec2249b58cfa035a8819456557655711fe8d81ea9cfbd22fd66837be509e8b0f458ee6680330b1c5cf1c6fc580b75b2df6aeb30cb94cf478031
 DIST postfix-2.10.2.tar.gz 3828326 SHA256 f1a735a5a9ffeac8fca59046c437c3b76e7f923fb4249db2a55b2bff0306ddd4 SHA512 fa6c123da040a8e332c0bf2430f5b098523c2eff42a6cf4bfe6618b82d59be8e5a7f5c85b09ab8fd0312058b2135b174e00890423e4d3f8f732c3dc3c91f01c3 WHIRLPOOL 4e1e453ecd653058faf7420d6bfb6ac6a6c343f03f9c1a4213c403a7164d99f659a0b9ba744b803c3d94cfaf3216d3505f44d22069421f6cc4a4651b6be1f316
-DIST postfix-2.11-20130929.tar.gz 3967337 SHA256 553564693981686adca6e520858581be311e07827bc9e8917591a1231eab0085 SHA512 7feb779371cef219f3ee3e9e9c3d9a67720bcedcd55b077069c0276aa00148491373ec8bd98bfa5c5d7f508ec85e6a0a77ae2431f67fd2cf0fac52e48cdaba1e WHIRLPOOL 71555bad3b82032a890f8814bb3a6fea8b281317dcb3169223bb05e95bcc930dae4389d89b3cab428b1093ed49bdc6bfffca853bd028af0bd5a636602b7e24c7
+DIST postfix-2.11-20131001.tar.gz 3965335 SHA256 c678ddd6282ab0357132626cc4f583a9c539b2281ff3c8ed6fb075ad89ae1528 SHA512 15bcd4cce0d064304e60e2a9742a4d72d4c563ed492220b048209f0ecf14481a91b504458b9a3fc7a043f4727ec01e207c3494ff0c2fe6c3c50e5734c8322804 WHIRLPOOL ee66d6644ef244443a4cf55a6e7e5d860a8170bfc4dbd2aa7c0ee1d3071ab61cdd38a00a1e4eb89125a6a54ce5e6fad6685d6cb91df6aba1bd538cfc42bdf9cd
 DIST postfix-vda-v11-2.9.5.patch 55009 SHA256 df30379c456971a514ae5587531bb5cd8492921a6a27e6d23f5014a1434945aa SHA512 c44497536e2bc313f2301e799a6614f396fc7bb06ef31493460edc59b0922b4d9a24802a84e2b8cf158277f5b0c8c59b53a4f8ef6896ee1e2ba538c562687010 WHIRLPOOL 70c438d2e98aaae6ebd37fadb5d5d0cbe3b31baf2119657009802be62bfeef7dc6a6e62fc8259bfe635ccbf4b0c8ffa17b35a04648c6c138575dda8314a28744
 DIST postfix-vda-v13-2.10.0.patch 55701 SHA256 6208021eb0b37ac6482e334e538ed5700cc22c4d4dd66ed9e975ae5f20bf935f SHA512 0b4b53a8cd28abf56eee3b2ed63ca1814251b60816e6ca1143249d25fd6ef7f905bec3134125ac6e851af685db8aae878012113693261529ae2ddbcf1bd93e62 WHIRLPOOL d98b7d2177b8b69738086880fd08c336fa60b99ff7413624e628fd5f17be2064f2ccaa37c047d3013ed41c0ff1bcb76e7962f8390c4179f28ab11733dd3b59d3
 EBUILD postfix-2.10.0.ebuild 10381 SHA256 e2bfafb98afdfc9c8f3e36a2dbfb0bb466d3e2f2bb0c188c3af7f34d684754d9 SHA512 9a7ff4685cc69095c527314d70003cb543c9b6951c92129bfd91def0bd0e84bcee666404a36f00b6f75290ce79784146a049bdb5009ea3f346afb5608c325623 WHIRLPOOL 3fc14e1b125f81ea11d420448718d050cabe1da95e823fcd7ee4267a9a3fd6b8c8955f5601d236f649ad819d0acf0cb27e0f9d49bf5c9f7865c1ceadd457a816
 EBUILD postfix-2.10.1.ebuild 9624 SHA256 d47ac79a5780d62239f23f1802b40326e9f39e459110d298dfc997523a415219 SHA512 c53e7010626bef1ca334dfa56e917fc68faf53f4bef3f922717f1f922871bcbba61c6cc5b86678993235ea9ee51b3ad446c12eadf5a88b790d10176700c41728 WHIRLPOOL 91d3b373cbc19603d785f6c07a1dfc2f7155e2bf3680a4503afa7d6f0219398593105f6eefb7b2a7f97b3add41313f2c8bdd201e8b3ea434083fa6828faf02c7
 EBUILD postfix-2.10.2.ebuild 9634 SHA256 fea9cd70e43f13335d294a4f29907d33f3aaf38b670be7f185aca1b2769c4237 SHA512 c77e24c58a93c3190adb055764b2631110a469921387442bc93a7210b46f93ba44b775f2059a67dbfa96def3d989e2d5ae0b8b4c2a3cea93520643cd07571152 WHIRLPOOL 0ea0b76b5ba38becbd96b09517f26ea20adc4178d584d1a21d9df4ab6f3b6405cf96bc5a13780c47ec769248b8ebcc8f5e009fabb82a48a1711665f43a646d6e
-EBUILD postfix-2.11_pre20130929.ebuild 9566 SHA256 2421752762b57238c28fc330529c1e81b7fe99f9940797f623f987bf1a13ebc2 SHA512 fec6cf84412195d172c32eb86266233ce4b5fe4495d2221c8587e4d6d767cbeb993fac9499e91e34cba461b72ff0dd6d1fea56dd85e9442b046f26c3deaf5d85 WHIRLPOOL 04fddd591b9596998f73ef75e46b39b828c53f9e82601ac176bb836af497790e03396f88320a24b1e4765d7e3fdd7dcdca16d10daae7a2533ffdb69cbd4186fd
-MISC ChangeLog 96987 SHA256 db5ea5be218209a1d3320bd66e162799b05663ba9d6a2efefed46c6b19f2f031 SHA512 401e4499116a059d24ddbe12d42cfc034b32397e32d922590817186dd35897aa6a6d05f4a31935c4aa911019aa15eb3e7b3a474b854355e875ae520391f6ad38 WHIRLPOOL 67e82047cd844825387480b9619388a888d2b5f62a09f171851a2a8ce61c9a895562d40d542fe1cf589ee1c1e4afa343270b3f378fc0657b85cebb8b7442d601
+EBUILD postfix-2.11_pre20131001.ebuild 9566 SHA256 457155c119c5826816e2cba47585a99236d815e7416faadb43964195a1607152 SHA512 d3cdc63dcd76dc25e9453152911b18ae7bbb6587ff0c7819cdc4b8f66e46462760cfb3c8e27a095f8dd384ab938dc570a208114ad00a20e2ae104aedfc41703c WHIRLPOOL 5089f081886022f08c55401c1e40ce8d02137c609fae61ae246434156f0e7ad826021505759ac7ded9f5742e291f0a33b2735ce57d6a55b37cd843c99fd997aa
+MISC ChangeLog 97158 SHA256 a7be3a788341ca5052cef01d55a204b4e86b64d269b343dc404eedb4b65e7e7d SHA512 f8f6548c4d9168baa66db49ab42debe4032208e4b8f8aa3209e8a21f860a593cb585eb31c069052feb404005b7171574126811f8924f47c555ba19481bb0e4c5 WHIRLPOOL d37eb01dbe23208c4a91b0859e0c3253252e2c996649e9b9577e221fb8fbd4f74f52611002d5c6082998743881a830ba18e0f5057e98b4ebf0eb62616dac770f
 MISC metadata.xml 610 SHA256 00b7ef524664b20a9df7642573745b1d17b0b51f005ffd150ac6dccba38dee88 SHA512 fd446f288b11070e2d6b5dad3ec259a889508c3c7f4755ea2ceda18500844e065ddc2bbce5f4108b30ebacff76443ea8a23805c21d39c2bf72210f801adcfe06 WHIRLPOOL 815ae4ddbaca96871454d44adbe3bec4a081d857c61b07cd0e382ce0d44503421a4ad156da6009cc91f24855b7c1d8adfe3fbd48c82833f9d82c1afaf798072e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSSVFhAAoJEHfx8XVYajsfrfAQAJUSLogI2YlHSMLwSFGMRldP
-PtZV9vZhlc0+1eNGJDL5p9D7AzsGt25FM77BAQklK489vHXfk9dGWgSR1sKjQYVE
-oEBolLIbh0RtI717qB4Ga0xlmez0O1+dvx71yV5kz/eG/6KsU9dh0mOtie+lWAtR
-1LgGkzgS5JiSjCsJnrNb9SD0eTpSTlJD59wC6bZFSVKm01nd4VnGsrJq4impCq/Q
-GMal0WbsAJc59l1IR+uNoHPGaa5gXc5Za0nTwqoRSc/RZoTJ4LpS9+bXjC5VckUm
-pSgyDMARCuOswJcZy5IlYU6TEa0dqQt0rG1J1E+YoB8jA/tIp/dke1GO7seSkxDq
-MRE8FXPtisfGft8/97xD/LNBOkCNrQs/yW+8kEvcnpWqUsJSC0Cohyf7PayP4cOj
-M2Xzn0KUyN4r4GCvx/tBZPrSn7SKhQvPwx3O3AmYYAi9A9v7xmEEF3v7eqDSlAUX
-wfC/LIuEPURG6ty+/Jxfg7EiLhumruU5HnrOvzpz/9PpG/asiQFTlGSjB1qKjg5W
-gFPWKbMhl6CoErE9btlIl4rWKoWPcnp52C6UzS17OMllrbdIHFqnhOej739NOIsv
-U5ZCgtVoup8v5XicfYcJXGoAI2tleITdABE29yo/lL6ongI8leRbj4br0n/A7s4x
-8vX4aYtJJmHgFOWGYJor
-=J9zu
+iQIcBAEBCAAGBQJSTQXmAAoJEHfx8XVYajsfn9wP/RE11N/KT/Tp0BFAAvdQkJdw
+HrAeZvZqRAMi5uWHzNmZZK1ZDN2y8asRGYEhQJw7qaX4nh6QjIIu0HHm+yk9+LNy
+ffBzum0xSy7N0ERqUxfqgROOuiV8gSE1Z83MtuHGbtctKIQ0FuZUTI0+UpkKmCsa
+1IE4P7zPrJc+SqEWrYyL+qINdTvnK+gR7/98rsAUUDSAqm4cMmNbjFoCXoS9cKA0
+B1vtTs4kuJFUAyKmNZX7o91NuKEME1BL0M9kjg3diDzuVzu0orfVlhP5xeROmYYA
+mSYbDjPXPXX+6ybfK9HsrgyYVzEuXxaiZfYjzxpwjVI3l/9POaqBo/QXoRnOyaJB
+HIUDUh60xVO4VfaYk3Vofmjemj1Os26qz/C2m/pK6qvHdF+xfvOOjuqDl6zUWNLY
+vVYL1KLa7ls6UGF/OkQ7wuWNP7720afT2AVTQpWoo8049kHwN8E5cFuopd9n9A6x
+A74dHP/5H4k2tatsHZ1V0w6e99QUM9OnSQZMP8aYoPFf5/RPkhK/R8VYdMcfUv9b
+/ouQhmmSVHYEvChP+PFjs86niVGO9RWTVKNjFp1aJAuXL9eM1Zvlj0zwag49XDD4
+N+OZLoROOD0UElYOWNQviLuE945iROI8VaNov0WYj7UMeyLSTDfupEVVd+e2cXve
+yWRgE4QueMSVFfPphfFu
+=tIxE
 -----END PGP SIGNATURE-----
