@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup test unpack
+DEPEND=ruby_targets_ruby18? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby18] virtual/ruby-rdoc[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby19] virtual/ruby-rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_ruby20] virtual/ruby-rdoc[ruby_targets_ruby20] ) ) ruby_targets_jruby? ( test? ( >=dev-ruby/minitest-4:0[ruby_targets_jruby] virtual/ruby-rdoc[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_jruby? ( dev-java/jruby )
+DESCRIPTION=Centralized Ruby extension management system
+EAPI=5
+HOMEPAGE=http://rubyforge.org/projects/rubygems/
+IUSE=server test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_jruby
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=|| ( Ruby MIT )
+PDEPEND=server? ( >=dev-ruby/builder-2.1 )
+RDEPEND=ruby_targets_jruby? ( >=dev-java/jruby-1.5.6-r1 ) ruby_targets_ruby19? ( >=dev-lang/ruby-1.9.3_rc1 ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_jruby? ( dev-java/jruby )
+REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_jruby )
+SLOT=0
+SRC_URI=http://production.cf.rubygems.org/rubygems/rubygems-2.0.10.tgz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	6032f7ec6471c6459da900e11f0f7bf7	multilib	892e597faee02a5b94eb02ab512e7622	prefix	21058c21ca48453d771df15500873ede	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=f2cabb12c835b1233219e8db4e7a0ef5
