@@ -9,6 +9,6 @@ LICENSE=IBM
 RDEPEND=>=dev-libs/libpcre-3.4 dev-lang/perl berkdb? ( >=sys-libs/db-3.2 ) cdb? ( || ( >=dev-db/tinycdb-0.76 >=dev-db/cdb-0.75-r1 ) ) ldap? ( net-nds/openldap ) ldap-bind? ( net-nds/openldap[sasl] ) mysql? ( virtual/mysql ) pam? ( virtual/pam ) postgres? ( dev-db/postgresql-base ) sasl? ( >=dev-libs/cyrus-sasl-2 ) sqlite? ( dev-db/sqlite:3 ) ssl? ( >=dev-libs/openssl-0.9.6g ) dovecot-sasl? ( net-mail/dovecot ) memcached? ( net-misc/memcached ) net-mail/mailbase selinux? ( sec-policy/selinux-postfix ) !mail-mta/courier !mail-mta/esmtp !mail-mta/exim !mail-mta/mini-qmail !mail-mta/msmtp[mta] !mail-mta/netqmail !mail-mta/nullmailer !mail-mta/qmail-ldap !mail-mta/sendmail !mail-mta/opensmtpd !<mail-mta/ssmtp-2.64-r2 !>=mail-mta/ssmtp-2.64-r2[mta] !net-mail/fastforward
 REQUIRED_USE=ldap-bind? ( ldap sasl )
 SLOT=0
-SRC_URI=ftp://ftp.porcupine.org/mirrors/postfix-release/experimental/postfix-2.11-20130929.tar.gz vda? ( http://vda.sourceforge.net/VDA/postfix-vda-v13-2.10.0.patch )
+SRC_URI=ftp://ftp.porcupine.org/mirrors/postfix-release/experimental/postfix-2.11-20131001.tar.gz vda? ( http://vda.sourceforge.net/VDA/postfix-vda-v13-2.10.0.patch )
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	multilib	892e597faee02a5b94eb02ab512e7622	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	ssl-cert	0b45da48a22fda62c57c1809b8b55315	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=62d8c8a66d3bbdcc7e64888379a39e07
+_md5_=03b837e1ab46674298ca4a92c0587894
