@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.463 2013/09/30 10:24:22 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.464 2013/10/03 05:51:23 eras Exp $
+
+*postfix-2.11_pre20131001 (03 Oct 2013)
+
+  03 Oct 2013; Eray Aslan <eras@gentoo.org> +postfix-2.11_pre20131001.ebuild,
+  -postfix-2.11_pre20130929.ebuild:
+  Version bump
 
 *postfix-2.11_pre20130929 (30 Sep 2013)
 
