@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rubygems
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.213 2013/09/10 18:21:48 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubygems/ChangeLog,v 1.214 2013/10/03 05:32:22 graaff Exp $
+
+*rubygems-2.0.10 (03 Oct 2013)
+
+  03 Oct 2013; Hans de Graaff <graaff@gentoo.org> +rubygems-2.0.10.ebuild:
+  Version bump. Further fixes for security bug 484476.
 
 *rubygems-2.0.8 (10 Sep 2013)
 
